cmake_minimum_required(VERSION 3.24.0 FATAL_ERROR)
message(STATUS "[bstone_sdl3]")
if(BSTONE_SDL_BUNDLED)
	add_subdirectory(lib)
else()
	find_package(SDL3 3.2.0 REQUIRED)
endif()
project(bstone_sdl3 VERSION 1.0.0 LANGUAGES CXX)
add_library(${PROJECT_NAME} STATIC src/bstone_stub.cpp)
add_library(bstone::sdl3 ALIAS ${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME} PUBLIC SDL3::SDL3)
