cmake_minimum_required(VERSION 3.24.0 FATAL_ERROR)
if (BSTONE_USE_STATIC_LINKING)
	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif ()
set(SDL_DEPS_SHARED ON CACHE BOOL "Load dependencies dynamically" FORCE)
set(SDL_GPU OFF CACHE BOOL "Enable the GPU subsystem" FORCE)
set(SDL_SHARED OFF CACHE BOOL "Build a shared version of the library" FORCE)
set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
set(SDL_TEST_LIBRARY OFF CACHE BOOL "Build the SDL3_test library" FORCE)
set(SDL_VENDOR_INFO "BStone" CACHE STRING "Vendor name and/or version to add to SDL_REVISION" FORCE)
add_subdirectory(src)
